<resources>
    <string name="app_name">LydiaTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="ville">Ville</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="pays">Pays</string>
    <string name="code_postale">Code postale</string>
    <string name="refresh">refresh</string>
</resources>